[package]
name = "lexer"
version = "0.1.0"
authors = ["Matt Green <mattgreenrocks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.3.1", features = ["perf-dfa", "perf-literal"] }
unicode-segmentation = "1.6.0"
