[package]
name = "lexer"
version = "0.1.0"
authors = ["Matt Green <mattgreenrocks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
bit-set = "0.5.1"
regex = { version = "1.3.1", features = ["perf-dfa", "perf-literal"] }
regex-syntax = "0.6.12"
unicode-segmentation = "1.6.0"

[dev-dependencies]
criterion = "0.3"