[package]
name = "lexer"
version = "0.1.0"
authors = ["Matt Green <mattgreenrocks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
fixedbitset = "0.2.0"
hashbrown = "0.3"
regex = "1.3.1"
regex-syntax = "0.6.12"

[dev-dependencies]
criterion = "0.3"